Pierwsza wrzutka na githube

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,9 @@
 
 // Sweetalert2
 @import '~sweetalert2/src/sweetalert2';
+
+// Fontawesome 5
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
